--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,29 @@
     font-family: 'Raleway', sans-serif;
 }
 
+.gradient {
+    background: rgb(177, 24, 218);
+    background: -moz-linear-gradient(68deg, rgba(177, 24, 218, 1) 30%, rgba(212, 90, 229, 1) 100%, rgba(160, 76, 238, 1) 100%);
+    background: -webkit-linear-gradient(68deg, rgba(177, 24, 218, 1) 30%, rgba(212, 90, 229, 1) 100%, rgba(160, 76, 238, 1) 100%);
+    background: linear-gradient(68deg, rgba(177, 24, 218, 1) 30%, rgba(212, 90, 229, 1) 100%, rgba(160, 76, 238, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#b118da", endColorstr="#a04cee", GradientType=1);
+}
+
 .purple-dark {
     background: #8e44ad;
 }
 
 .purple-clear {
     background: #9b59b6;
+}
+
+.division {
+    height: 200px;
+    background: rgb(177, 24, 218);
+    background: -moz-linear-gradient(68deg, rgba(177, 24, 218, 1) 30%, rgba(229, 90, 188, 1) 100%, rgba(160, 76, 238, 1) 100%);
+    background: -webkit-linear-gradient(68deg, rgba(177, 24, 218, 1) 30%, rgba(229, 90, 188, 1) 100%, rgba(160, 76, 238, 1) 100%);
+    background: linear-gradient(68deg, rgba(177, 24, 218, 1) 30%, rgba(229, 90, 188, 1) 100%, rgba(160, 76, 238, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#b118da", endColorstr="#a04cee", GradientType=1);
 }
 
 .top {
@@ -26,15 +43,23 @@
     position: absolute;
     width: 100%;
     height: 100vh;
-    background: #8e44ad;
+    background: rgb(177, 24, 218);
+    background: -moz-linear-gradient(68deg, rgba(177, 24, 218, 1) 30%, rgba(212, 90, 229, 1) 100%, rgba(160, 76, 238, 1) 100%);
+    background: -webkit-linear-gradient(68deg, rgba(177, 24, 218, 1) 30%, rgba(212, 90, 229, 1) 100%, rgba(160, 76, 238, 1) 100%);
+    background: linear-gradient(68deg, rgba(177, 24, 218, 1) 30%, rgba(212, 90, 229, 1) 100%, rgba(160, 76, 238, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#b118da", endColorstr="#a04cee", GradientType=1);
     opacity: 0.9;
     align-items: center;
     justify-content: center !important;
 }
 
 .content-top {
-    z-index: 10;
     color: #FFF;
+}
+
+.content-top button {
+    position: absolute;
+    font-weight: bold;
 }
 
 .dropdown-menu a {
@@ -57,7 +82,80 @@
 }
 
 .login .btn:hover {
-    background: #9b59b6;
+    background: #FFF;
+    color: #8e44ad !important;
+}
+
+/* piano-home */
+
+.piano-home {
+    padding-top: 100px;
+    padding-bottom: 120px;
+    font-size: 1.2rem;
+}
+
+/* study */
+
+.study {
+    height: auto;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    font-size: 1.2rem;
+}
+
+/* singup */
+
+.sign-up {
+    height: auto;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    font-size: 1.2rem;
+}
+
+.social-login {
+    font-size: 5rem;
+}
+
+.fa-facebook-square {
+    color: #4267b2;
+    cursor: pointer;
+}
+
+.fa-linkedin {
+    color: #0073b1;
+    cursor: pointer;
+}
+
+.fa-twitter-square {
+    color: #1DA1F2;
+    cursor: pointer;
+}
+
+.fab:hover {
+    border-bottom: 3px solid #8e44ad;
+}
+
+.sign-up input {
+    outline: none;
+    border: none;
+    border-bottom: 1px solid #8e44ad;
+}
+
+.sign-up .form-control:focus {
+    box-shadow: 0 0 0 0.1rem #9b59b6;
+    border-color: #8e44ad;
+    border-bottom: none;
+}
+
+.sign-up .btn {
+    background: #8e44ad;
+    color: #FFF;
+}
+
+.sign-up .btn:hover {
+    background: #FFF;
+    border: 1px solid #8e44ad;
+    color: #8e44ad;
 }
 
 @media (max-width: 990px) {
@@ -76,6 +174,7 @@
         margin-top: 10px;
         margin-left: 0px;
     }
+
 
 
 }
