--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,7 @@
     outline: none;
     border: none;
     border-bottom: 1px solid #8e44ad;
+    font-weight: bold;
 }
 
 .sign-up .form-control:focus {
@@ -158,6 +159,13 @@
     color: #8e44ad;
 }
 
+/* footer */
+
+footer {
+    height: 150px;
+    background-color: #2b2c2e;
+}
+
 @media (max-width: 990px) {
 
     .top {
@@ -173,6 +181,11 @@
     .login {
         margin-top: 10px;
         margin-left: 0px;
+    }
+
+    .social-login {
+        margin-top: 50px;
+        font-size: 5rem;
     }
 
 
