--- a/css/main.css
+++ b/css/main.css
@@ -22,11 +22,6 @@
 
 .division {
     height: 200px;
-    background: rgb(177, 24, 218);
-    background: -moz-linear-gradient(68deg, rgba(177, 24, 218, 1) 30%, rgba(229, 90, 188, 1) 100%, rgba(160, 76, 238, 1) 100%);
-    background: -webkit-linear-gradient(68deg, rgba(177, 24, 218, 1) 30%, rgba(229, 90, 188, 1) 100%, rgba(160, 76, 238, 1) 100%);
-    background: linear-gradient(68deg, rgba(177, 24, 218, 1) 30%, rgba(229, 90, 188, 1) 100%, rgba(160, 76, 238, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#b118da", endColorstr="#a04cee", GradientType=1);
 }
 
 .top {
@@ -43,11 +38,7 @@
     position: absolute;
     width: 100%;
     height: 100vh;
-    background: rgb(177, 24, 218);
-    background: -moz-linear-gradient(68deg, rgba(177, 24, 218, 1) 30%, rgba(212, 90, 229, 1) 100%, rgba(160, 76, 238, 1) 100%);
-    background: -webkit-linear-gradient(68deg, rgba(177, 24, 218, 1) 30%, rgba(212, 90, 229, 1) 100%, rgba(160, 76, 238, 1) 100%);
-    background: linear-gradient(68deg, rgba(177, 24, 218, 1) 30%, rgba(212, 90, 229, 1) 100%, rgba(160, 76, 238, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#b118da", endColorstr="#a04cee", GradientType=1);
+
     opacity: 0.9;
     align-items: center;
     justify-content: center !important;
@@ -148,12 +139,12 @@
     border-bottom: none;
 }
 
-.sign-up .btn {
+.btn-default {
     background: #8e44ad;
     color: #FFF;
 }
 
-.sign-up .btn:hover {
+.btn-default:hover {
     background: #FFF;
     border: 1px solid #8e44ad;
     color: #8e44ad;
@@ -162,9 +153,52 @@
 /* footer */
 
 footer {
-    height: 150px;
+    height: auto;
+    padding-top: 50px;
+    padding-bottom: 50px;
     background-color: #2b2c2e;
+    color: #FFF;
 }
+
+.social i {
+    padding: 15px 5px 0px 5px;
+    transition: .3s;
+    font-size: 3rem;
+    color: #FFF;
+}
+
+.social i:hover {
+    cursor: pointer;
+    text-decoration: none;
+    color: #9b59b6;
+    border-bottom: none;
+}
+
+footer ul {
+    justify-content: start;
+}
+
+footer ul li {
+    list-style: none;
+}
+
+footer ul li:hover i {
+    color: #9b59b6;
+}
+
+footer ul li:hover a {
+    text-decoration: none;
+    color: #FFF;
+}
+
+footer a {
+    color: #FFF;
+    font-size: 1.2rem;
+}
+
+
+
+
 
 @media (max-width: 990px) {
 
@@ -188,6 +222,9 @@ footer {
         font-size: 5rem;
     }
 
+    .footer-box {
+        padding-top: 35px;
+    }
 
 
 }
