--- a/css/piano.css
+++ b/css/piano.css
@@ -1,21 +1,3 @@
-/*html {
-    font-family: 'Condiment', cursive;
-    text-align: center;
-    font-size: 1.2rem;
-}
-
-@media (max-width: 700px) {
-    html {
-        font-size: 14px;
-    }
-}
-
-@media (max-width: 500px) {
-    html {
-        font-size: 10px;
-    }
-}*/
-
 body {
     font-size: 1.2rem;
 }
@@ -130,6 +112,7 @@ body {
     display: flex;
     margin: 10px auto 10px;
     position: relative;
+    overflow: hidden;
 }
 
 .white,
