--- a/css/main.css
+++ b/css/main.css
@@ -358,7 +358,6 @@ footer a {
 }
 
 @media (max-width: 990px) {
-
     .top {
         background-image: url(/img/musical1.jpg);
         background-size: cover;
@@ -407,5 +406,8 @@ footer a {
         margin-top:20px;
     }
 
+    .hide-mobile{
+        display: none;
+    }
 
 }
